--- a/contexttransalator/index.html
+++ b/contexttransalator/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Extension build</title>
-    <base href="/" />
+    <!-- <base href="/" /> -->
     <link href="contexttranslator.css" rel="stylesheet" />
     <script src="contexttranslator.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bootstrap.min.css" rel="stylesheet" />
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script> -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="font-awesome.min.css" rel="stylesheet" />
+<script src="jquery.min.js"></script>
 </head>
 <body>
     <h2>Rigth-click in selected text > shows it's traduction from [wordreference/linguee...]</h2>
