--- a/contexttransalator/index.html
+++ b/contexttransalator/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script> -->
 <link href="font-awesome.min.css" rel="stylesheet" />
 <script src="jquery.min.js"></script>
+<script src="assets/i18nextBrowserLanguageDetector.min.js"></script>
 </head>
 <body>
     <h2>Rigth-click in selected text > shows it's traduction from [wordreference/linguee...]</h2>
