--- a/contexttransalator/index.html
+++ b/contexttransalator/index.html
@@ -4,22 +4,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Extension build</title>
+    <title>Fast translation</title>
     <!-- <base href="/" /> -->
     <link href="contexttranslator.css" rel="stylesheet" />
     <script src="contexttranslator.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet" />
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script> -->
-<link href="font-awesome.min.css" rel="stylesheet" />
-<script src="jquery.min.js"></script>
-<script src="assets/i18nextBrowserLanguageDetector.min.js"></script>
+    <link href="font-awesome.min.css" rel="stylesheet" />
+    <script src="jquery.min.js"></script>
+    <script src="assets/i18nextBrowserLanguageDetector.min.js"></script>
 </head>
+
 <body>
-    <h2>Rigth-click in selected text > shows it's traduction from [wordreference/linguee...]</h2>
-    <h3>BUILD THE EXTENSION</h3>
-    <h4>Text to try:</h4>
+    
+    <h4>Rigth-click in selected text > shows it's traduction from [wordreference/linguee...]</h4>
+    <h4>BUILD THE EXTENSION</h4>
+    <h5>Text to try:</h5>
     <p class="font-size-rem-1">
-        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.
+        The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of
+        Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.
     </p>
     <p>
         <input type="time" placeholder="time" />
@@ -33,10 +37,10 @@
         <li class="collection-item"><div>Archive<a href="#!" class="secondary-content"><i class="material-icons">archive</i></a></div></li>
       </ul>-->
 
-      <!-- Bootstrap dropdown menu -->
-      <!-- <div class="dropdown"> -->
-        <!-- Link or button to toggle dropdown -->
-       <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+    <!-- Bootstrap dropdown menu -->
+    <!-- <div class="dropdown"> -->
+    <!-- Link or button to toggle dropdown -->
+    <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
           <li><a tabindex="-1" href="#">Action</a></li>
           <li><a tabindex="-1" href="#">Another action</a></li>
           <li><a tabindex="-1" href="#">Something else here</a></li>
@@ -45,30 +49,53 @@
         </ul>
       </div> -->
 
-      <!--Bootstrap example -->
-      <div id="context-translation">
+    <!--Bootstrap example -->
+    <div id="context-translation">
         <div class="row d-flex justify-content-center">
             <div class="card">
                 <div class="row">
-                    <div class="flex-column">
-                        <h3 class="mb-0 font-weight-normal">Translation from Linguee</h3> <select name="privacy" class="privacy">
-                            <option>EN (detected)</option>
-                            <option>GER</option>
-                            <option>FR</option>
-                            <option>ES</option>
-                        </select> 
+                    <div class="col-12">
+                        <h6 class="font-weight-normal">Fast translation</h6>
                     </div>
-                </div>   
+                </div>
+                <div class="row">
+                    <div class="col-6"> 
+                        <div class="language-select-container">
+                            From: <select name="privacy" class="privacy">
+                                <option>EN (detected)</option>
+                                <option>GER</option>
+                                <option>FR</option>
+                                <option>ES</option>
+                            </select>                       
+                        </div>                        
+                    </div>
+                    <div class="col-6">
+                        <!-- To: <span id="user-language"></span> -->
+                        <div class="language-select-container" style="float: right;">
+                            To: <select name="privacy" class="privacy">
+                                <option>EN (detected)</option>
+                                <option>GER</option>
+                                <option>FR</option>
+                                <option>ES</option>
+                            </select>
+                        
+                    </div>  
+                </div>
+                </div>
                 <!-- TODO: Add button 'Re-translate', that gets the selected language as origin language -->
-                <div class="row px-3 form-group"> <textarea class="text-muted bg-light mt-4 mb-3" placeholder="Hi Camilla, what's on your mind today?"></textarea> </div>
+                <div class="row px-3 form-group"> <textarea class="text-muted bg-light mt-4 mb-3"
+                        placeholder="- Translation of selected text -"></textarea> </div>
                 <div class="row px-3">
                     <p class="fa fa-user options mb-0 mr-4"></p>
                     <p class="fa fa-map-marker options mb-0 mr-4"></p>
-                    <p class="fa fa-image options mb-0 mr-4"></p> <img class="options" src="https://img.icons8.com/material/24/000000/more--v2.png" width="30px" height="28px">
+                    <p class="fa fa-image options mb-0 mr-4"></p> <img class="options"
+                        src="https://img.icons8.com/material/24/000000/more--v2.png" width="30px" height="28px">
                     <div class="btn btn-success ml-auto">Copy to clipboard</div>
                 </div>
             </div>
         </div>
     </div>
+    <div id="translation-output"></div> 
 </body>
+
 </html>
