--- a/contexttransalator/index.html
+++ b/contexttransalator/index.html
@@ -7,7 +7,7 @@
     <title>Fast translation</title>
     <!-- <base href="/" /> -->
     <link href="contexttranslator.css" rel="stylesheet" />
-    <script src="contexttranslator.js"></script>
+    <!-- <script src="contexttranslator.js"></script> -->
     <link href="bootstrap.min.css" rel="stylesheet" />
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script> -->
     <link href="font-awesome.min.css" rel="stylesheet" />
@@ -90,7 +90,7 @@
                 <div id="translation-result-container">
                     <div class="col-12 form-group">
                         <label>translation:</label>
-                        <textarea class="" style="color:black;"
+                        <textarea class="" style="color:black !important; border: 1px solid rgba(0,0,0,.125) !important; border-radius: 7px !important;"
                             placeholder=" - Translation of the selected text">There are close interrelationships
                         </textarea>
                     </div>                    
@@ -102,7 +102,7 @@
                         <p class="fa fa-image options mb-0 mr-4"></p> <img class="options"
                             src="https://img.icons8.com/material/24/000000/more--v2.png" width="30px" height="28px"> -->
                         <div class="col-4">&nbsp;</div>
-                        <div class="col-8 bu-big">&nbsp;
+                        <div id="button-copy" class="col-8 bu-big">&nbsp;
                             <div class="btn btn-success ml-auto w-100">Copy to clipboard</div>
                         </div>
                     </div>
