--- a/contexttransalator/index.html
+++ b/contexttransalator/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Fast translation</title>
     <!-- <base href="/" /> -->
-    <link href="contexttranslator.css" rel="stylesheet" />
+    <!-- <link href="contexttranslator.css" rel="stylesheet" /> -->
     <!-- <script src="contexttranslator.js"></script> -->
     <link href="bootstrap.min.css" rel="stylesheet" />
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script> -->
@@ -15,7 +15,7 @@
     <script src="assets/i18nextBrowserLanguageDetector.min.js"></script>
 </head>
 
-<body>
+<body style="line-height: unset !important;">
 
     <h4>Rigth-click in selected text > shows it's traduction from [wordreference/linguee...]</h4>
     <h4>BUILD THE EXTENSION</h4>
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="language-select-container form-group">
-                            <label class="dark-grey">From: </label>
+                            <label class="dark-grey" style="margin-bottom: 0 !important;">From: </label>
                             <select name="privacy" class="privacy">
                                 <option>GER (detected)</option>
                                 <option>EN</option>
@@ -76,8 +76,9 @@
                     </div>
                     <div class="col-4">
                         <!-- To: <span id="user-language"></span> -->
-                        <div class="language-select-container" style="float: right;">
-                            <p class="dark-grey">To: <br /><select name="privacy" class="privacy">
+                        <div class="language-select-container form-group" style="float: right;"">
+                            <label class="dark-grey" style="margin-bottom: 0 !important;">To: </label>
+                                <select name="privacy" class="privacy">
                                     <option>EN (detected)</option>
                                     <option>GER</option>
                                     <option>FR</option>
@@ -87,10 +88,13 @@
                         </div>
                     </div>
                 </div>
-                <div id="translation-result-container">
+                <div id="translation-result-container" style="text-align: center;">
                     <div class="col-12 form-group">
-                        <label>translation:</label>
-                        <textarea class="" style="color:black !important; border: 1px solid rgba(0,0,0,.125) !important; border-radius: 7px !important;"
+                        <label style=" margin-top: 1rem;
+                        margin-bottom: 1rem;">translation:</label>
+                        <textarea class="" style="border: 1px solid rgba(0,0,0,.125) !important;
+                        border-radius: 7px !important;
+                        color: black !important;""
                             placeholder=" - Translation of the selected text">There are close interrelationships
                         </textarea>
                     </div>                    
@@ -102,7 +106,10 @@
                         <p class="fa fa-image options mb-0 mr-4"></p> <img class="options"
                             src="https://img.icons8.com/material/24/000000/more--v2.png" width="30px" height="28px"> -->
                         <div class="col-4">&nbsp;</div>
-                        <div id="button-copy" class="col-8 bu-big">&nbsp;
+                        <div id="button-copy" class="col-8 bu-big" style="margin: 0; padding: 0;
+                        margin-bottom: 1.7rem;
+                        position: relative;
+                        top: -0.5rem !important;">&nbsp;
                             <div class="btn btn-success ml-auto w-100">Copy to clipboard</div>
                         </div>
                     </div>
