--- a/contexttransalator/index.html
+++ b/contexttransalator/index.html
@@ -52,16 +52,12 @@
     <!--Bootstrap example -->
     <div id="context-translation">
         <div class="row d-flex justify-content-center">
-            <div class="card">
-                <!-- <div class="row">
-                    <div class="col-12">
-                        <h6 class="font-weight-normal">Fast translation</h6>
-                    </div>
-                </div> -->
+            <div class="card">                
                 <div class="row">
                     <div class="col-4">
                         <div class="language-select-container form-group">
                             <label class="dark-grey" style="margin-bottom: 0 !important;">From: </label>
+                            <br />
                             <select name="privacy" class="privacy">
                                 <option>GER (detected)</option>
                                 <option>EN</option>
@@ -74,10 +70,10 @@
                     <div class="col-4">
                         <div class="btn btn-primary ml-auto w-100">Translate Again</div>
                     </div>
-                    <div class="col-4">
-                        <!-- To: <span id="user-language"></span> -->
+                    <div class="col-4">                        
                         <div class="language-select-container form-group" style="float: right;"">
                             <label class="dark-grey" style="margin-bottom: 0 !important;">To: </label>
+                                <br />
                                 <select name="privacy" class="privacy">
                                     <option>EN (detected)</option>
                                     <option>GER</option>
@@ -100,16 +96,8 @@
                     </div>                    
                 </div>
                     <div class="row">
-
-                        <!-- <p class="fa fa-user options mb-0 mr-4"></p>
-                        <p class="fa fa-map-marker options mb-0 mr-4"></p>
-                        <p class="fa fa-image options mb-0 mr-4"></p> <img class="options"
-                            src="https://img.icons8.com/material/24/000000/more--v2.png" width="30px" height="28px"> -->
                         <div class="col-4">&nbsp;</div>
-                        <div id="button-copy" class="col-8 bu-big" style="margin: 0; padding: 0;
-                        margin-bottom: 1.7rem;
-                        position: relative;
-                        top: -0.5rem !important;">&nbsp;
+                        <div id="button-copy" class="col-8 bu-big">&nbsp;
                             <div class="btn btn-success ml-auto w-100">Copy to clipboard</div>
                         </div>
                     </div>
